# Copyright 2022 Ant Group Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("//bazel:yacl.bzl", "yacl_cc_library", "yacl_cc_test")

package(default_visibility = ["//visibility:public"])

yacl_cc_library(
    name = "pedersen_commit",
    hdrs = [
        "pedersen_commit.h",
    ],
    deps = [
        "//yacl/crypto/hash:hash_utils",
        "//yacl/crypto/zkp:sigma_owh",
    ],
)

yacl_cc_test(
    name = "pedersen_commit_test",
    srcs = ["pedersen_commit_test.cc"],
    deps = [
        ":pedersen_commit",
    ],
)
