# Copyright 2023 Ant Group Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("//bazel:yacl.bzl", "yacl_cc_library", "yacl_cc_test")

package(default_visibility = ["//visibility:public"])

yacl_cc_library(
    name = "digital_envelope",
    srcs = ["digital_envelope.cc"],
    hdrs = ["digital_envelope.h"],
    deps = [
        "//yacl/crypto/aead:gcm_crypto",
        "//yacl/crypto/aead:sm4_mac",
        "//yacl/crypto/block_cipher:symmetric_crypto",
        "//yacl/crypto/hash:ssl_hash",
        "//yacl/crypto/hmac:hmac_sm3",
        "//yacl/crypto/pke:asymmetric_rsa_crypto",
        "//yacl/crypto/pke:asymmetric_sm2_crypto",
        "//yacl/crypto/rand",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/types:span",
    ],
)

yacl_cc_test(
    name = "digital_envelope_test",
    srcs = ["digital_envelope_test.cc"],
    deps = [
        ":digital_envelope",
    ],
)
